--- a/FrontEnd/src/app/components/banner/banner.component.html
+++ b/FrontEnd/src/app/components/banner/banner.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-    <div class="col-11 mx-auto">
-        <img class="img-fluid" src="../../../assets/banner.jpg">    
+<div class="row" id="rowbanner">
+    <div class="col-11">
+        <img src="../../../assets/fondociudad.gif" id="imagenbanner">
     </div>
 </div>
