--- a/FrontEnd/src/app/components/exp/exp.component.html
+++ b/FrontEnd/src/app/components/exp/exp.component.html
@@ -10,10 +10,14 @@
             <table class="table">
                 <tbody>
                     <tr *ngFor="let Experiencia of expe">
-                        <td><h2>{{Experiencia.nombreE}}</h2></td>
+                        <td>
+                            <h2>{{Experiencia.nombreE}}</h2>
+                        </td>
                         <td>{{Experiencia.descripcionE}}</td>
-                        <td *ngIf="isLogged"><button type="button" class="btn btn-primary" routerLink="/editexp/{{Experiencia.id}}"><i class="bi bi-pencil"></i>EDITAR</button></td>
-                        <td *ngIf="isLogged"><button type="button" class="btn btn-danger" (click)="delete(Experiencia.id)"><i class="bi bi-trash3"></i>BORRAR</button></td>
+                        <td *ngIf="isLogged"><button type="button" class="btn btn-primary"
+                             routerLink="/editexp/{{Experiencia.id}}"><i class="bi bi-pencil"></i>EDITAR</button></td>
+                        <td *ngIf="isLogged"><button type="button" class="btn btn-danger" (click)="delete(Experiencia.id)"><i
+                             class="bi bi-trash3"></i>BORRAR</button></td>
                     </tr>
                 </tbody>
             </table>    
