arreglo de colores

--- a/FrontEnd/src/app/components/login/login.component.html
+++ b/FrontEnd/src/app/components/login/login.component.html
@@ -7,8 +7,8 @@
 
             <div class="mb-md-5 mt-md-4 pb-5">
 
-              <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-              <p class="text-white-50 mb-5">Please enter your login and password!</p>
+              <h2 class="fw-bold mb-2 text-uppercase">Ingresar</h2>
+              <p class="text-white-50 mb-5">Ingresar credenciales de acceso</p>
 
               <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
 
@@ -26,15 +26,12 @@
 
                 <!-- <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p> -->
 
-                <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
+                <button class="btn btn-outline-light btn-lg px-5" type="submit">Acceder</button>
               </form>
 
             </div>
 
-            <div>
-              <p class="mb-0">sin cuenta todavia? <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
-              </p>
-            </div>
+            
 
           </div>
         </div>
